--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "webcurriculo",
-  "version": "0.1.0",
+  "homepage" : "https://webcurriculo.herokuapp.com",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "antd": "^3.26.2",
