--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": "10.16.3"
+    "node": "10.16.3",
+    "npm": "6.11.3"
   },
   "dependencies": {
     "antd": "^3.26.2",
