--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
   "name": "webcurriculo",
   "description": "Meu web curriculo - DG Site",
-  "homepage": "https://webcurriculo.herokuapp.com",
-  "version": "1.0.0",
+  "homepage": "https://webcurriculo.web.app",
+  "version": "2.0.0",
   "private": true,
-  "engines": {
-    "node": "10.16.3",
-    "npm": "6.11.3"
-  },
   "dependencies": {
     "antd": "^3.26.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
